# serializer version: 1
# name: test_device_tracker_setup[device_tracker.device1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.CONNECTION: 'connection'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.device1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'device1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'device1',
    'platform': 'luci',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01JBVVVJ87F6G5V0QJX6HBC94T_AA:BB:CC:DD:EE:FF',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_tracker_setup[device_tracker.device1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'device1',
      <ScannerEntityStateAttribute.HOST_NAME: 'host_name'>: 'device1',
      <DeviceTrackerEntityStateAttribute.IN_ZONES: 'in_zones'>: list([
        'zone.home',
      ]),
      <ScannerEntityStateAttribute.IP: 'ip'>: '192.168.1.100',
      <ScannerEntityStateAttribute.MAC: 'mac'>: 'AA:BB:CC:DD:EE:FF',
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.ROUTER: 'router'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.CONNECTION: 'connection'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.device1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'home',
  })
# ---
# name: test_device_tracker_setup[device_tracker.device2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.CONNECTION: 'connection'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'device_tracker',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'device_tracker.device2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'device2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'device2',
    'platform': 'luci',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '01JBVVVJ87F6G5V0QJX6HBC94T_11:22:33:44:55:66',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_tracker_setup[device_tracker.device2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'device2',
      <ScannerEntityStateAttribute.HOST_NAME: 'host_name'>: 'device2',
      <DeviceTrackerEntityStateAttribute.IN_ZONES: 'in_zones'>: list([
        'zone.home',
      ]),
      <ScannerEntityStateAttribute.IP: 'ip'>: '192.168.1.101',
      <ScannerEntityStateAttribute.MAC: 'mac'>: '11:22:33:44:55:66',
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.ROUTER: 'router'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.CONNECTION: 'connection'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.device2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'home',
  })
# ---
